finalização da home page

--- a/home.html
+++ b/home.html
@@ -42,12 +42,11 @@
     
             <div class="separator">
                 <div></div>
-                <div>ou</div>
+                <div>ou crie sua propria sala</div>
                 <div></div>
             </div>
     
             <section>
-                <h2>Crie sua própria sala</h2>
                 <a href="create-room.html" class="button outlined">
                     <img src="assets/persons-btn-criar-sala.svg" alt="Create Room">
                     Criar sala
