add backpage btn

--- a/create-room.html
+++ b/create-room.html
@@ -9,7 +9,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/create-room.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -33,12 +33,19 @@
                     <form action="">
                         <label class="sr-only" for="room-id">Ensira sua senha</label>
                         <input type="number" id="room-id" placeholder="Create your own room code">
-                        <button>
+                        <button id="create-room">
                             <img src="assets/persons-btn-criar-sala-branco.svg" alt="Create Room">
                             Cria sala
                         </button>
                     </form>
                 </section>
+            </div>
+
+            <div id="btn-voltar">
+                <a href="home.html">
+                    <img src="assets/backpage1.svg" alt="back page">
+                </a>
+            </div>
         </main>
     </div>
 </body>
