--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                     <form action="">
                         <label class="sr-only" for="room-id">Código da sala</label>
                         <input type="number" id="room-id" placeholder="Enter room code">
-                        <button>
+                        <button id="enter-room">
                             <img src="assets/enter-arrow-visitor.svg" alt="Enter Room">
                             Entrar na sala
                         </button>
