--- a/create-room.html
+++ b/create-room.html
@@ -33,18 +33,17 @@
                     <form action="">
                         <label class="sr-only" for="room-id">Ensira sua senha</label>
                         <input type="number" id="room-id" placeholder="Create your own room code">
-                        <button id="create-room">
-                            <img src="assets/persons-btn-criar-sala-branco.svg" alt="Create Room">
-                            Cria sala
-                        </button>
+                        <div id="create-page-buttons">
+                            <a href="home.html">
+                                <img src="assets/backpage1.svg" alt="back page">
+                            </a>
+                            <button id="create-room">
+                                <img src="assets/persons-btn-criar-sala-branco.svg" alt="Create Room">
+                                Cria sala
+                            </button>
+                        </div>
                     </form>
                 </section>
-            </div>
-
-            <div id="btn-voltar">
-                <a href="home.html">
-                    <img src="assets/backpage1.svg" alt="back page">
-                </a>
             </div>
         </main>
     </div>
